[tool.poetry]
name = "pybinpick"
version = "0.1.0"
description = ""
authors = ["Felix Warmuth <felix.warmut@mailbox.org>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
binpick-database = "pybinpick.cli:database"

